trading.log
  File "/home/runner/work/Whatman42/Whatman42/main.py", line 732
    "EMA_5", EMA_10", "EMA_20", "EMA_50", "EMA_100", "EMA_200",
                                                             ^
SyntaxError: unterminated string literal (detected at line 732)
